Updated Location Point Logic
Now can add location points, trail no longer needs location points when adding, add a trail location point by id, can now do crud operations for location points
