# CW2/app.py
@@ -2,7 +2,7 @@ from flask import render_template
 import config
 from models import Trail
 from config import db
-from trails import get_all_trails_with_details  # Import the method
+from trails import get_all_trails  # Import the method
 
 config.connex_app.add_api(config.basedir / "swagger.yml")
 
@@ -10,7 +10,7 @@ app = config.app
 
 @app.route("/")
 def home():
-    trails = get_all_trails_with_details()
+    trails = get_all_trails(details=True)
 
     return render_template("home.html", trails=trails)
 
